Version 2.43 (09 February 2004) [rursu]
- Updated headers in examples

2.42 (21 October 2003)
- fix headers

2.41 (18 September 2003)
- New headers.

2.39 (25 July 2003)
- Remove demo (uses LEDA window and is useless).

2.38 (11 May 2003) [af]
- Removed Interval_base
- Function to_interval returns std::pair<double,double>

2.37 (21 October 2002)
- Remove doc_tex/support/Makefile (Susan asked...).

2.36 (12 August 2002)
- replace LEFTTURN and relatives by LEFT_TURN and relatives

============================== CGAL 2.4 ========================

2.35 (29 April 2002)
- split of reference manual

2.34 (26 April 2002)
- Actually, makefile needs to be submitted for the demo (-lCGALWin)...

2.33 (24 April 2002)
- dont_submit the test makefile.
- Add a main() function in the test_*.C files so that correct rules are
  actually created by create_makefile.

2.32 (21 March 2002)
- converted doc to new manual style

2.31 (20 March 2002)
- removed _tag suffix from names of number type traits names

2.30 (20 March 2002)
- Remove number_type_tag
- Add tags for number type operations.

2.29 (20 September 2001)
- Remove useless #includes<>, including non-standard <strstream>.

2.28 (29 August 2001)
- changed ccSection command to section command since pdf converter cannot handle
  the former

2.27 (8 August 2001)
- Move .round() before its calls so that it can be inlined.

2.26 (8 August 2001)
- main() properly returns an int and not a bool in the test programs.

2.25 (1 August 2001)
- Test with MP_Float when GMP is not there.

2.24 (12 July 2001)
- Undo last change as it produces run time failures (I don't know why).
- Put the offending functions inline.

2.23 (9 July 2001)
- Move some stuff back to src/Fixed_precision_nt.C, because non-static
  non-inline non-template functions cannot be multiply linked !

2.22 (28 June 2001)
- Update doc/demo/example to use CGAL::force_ieee_double_precision().

2.21 (20 June 2001)
- Use CGAL window in the demo when LEDA is not present.