@@ -112,6 +112,12 @@ public:
   typedef typename Number_type_traits<CT>::Has_division Has_division;
   typedef typename Number_type_traits<CT>::Has_sqrt     Has_sqrt;
 
+  typedef typename Number_type_traits<CT>::Has_exact_sqrt Has_exact_sqrt;
+  typedef typename Number_type_traits<CT>::Has_exact_division
+  Has_exact_division;
+  typedef typename Number_type_traits<CT>::Has_exact_ring_operations
+  Has_exact_ring_operations;
+
   Filtered_exact () {}
   Filtered_exact (const CT & ct)
       : _value(ct)  { update_cache(); }
